Klasse Aufgabe erstellt

--- a/MaMoOr_GUI/MaMoOr_GUI/MaMoOr_GUI.csproj
+++ b/MaMoOr_GUI/MaMoOr_GUI/MaMoOr_GUI.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Aufgabe.cs" />
     <Compile Include="DetailAnsicht.xaml.cs">
       <DependentUpon>DetailAnsicht.xaml</DependentUpon>
     </Compile>
