--- a/MaMoOr_GUI/MaMoOr_GUI/MaMoOr_GUI.csproj
+++ b/MaMoOr_GUI/MaMoOr_GUI/MaMoOr_GUI.csproj
@@ -78,6 +78,7 @@
     <Compile Include="DetailAnsicht.xaml.cs">
       <DependentUpon>DetailAnsicht.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Filter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -117,22 +118,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="lupe_icon.png" />
+    <Resource Include="image\lupe_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="user_icon.jpg" />
+    <Resource Include="image\user_icon.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="upload_icon.png" />
+    <Resource Include="image\upload_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="home_icon.png" />
+    <Resource Include="image\home_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="download_icon.png" />
+    <Resource Include="image\download_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="plus_icon.png" />
+    <Resource Include="image\plus_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
